plex/1-plex-storage.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: plexserver
